@@ -75,7 +75,8 @@ gboolean turn_can_move_ship()
 {
 	return have_rolled_dice()
 		&& stock_num_ships() < game_params->num_build_type[BUILD_SHIP]
-		&& map_can_place_ship(map, my_player_num());
+		&& map_can_place_ship(map, my_player_num()
+		&& !map->has_moved_ship);
 }
 
 gboolean turn_can_build_bridge()
